# test-actions-cpp

./: CMakeLists.txt  CMakePresets.json  Dockerfile  main.cpp
.github/workflows/: cmake-multi-platform.yml
hello/: hello.cpp
src/hello/: CMakeLists.txt
